# iconv

./: .gitignore  CMakeLists.txt  README.md
lib/: iconv.c  iconv.h  localcharset.c  localcharset.h
linux/: config.h
msvc/: config.h
tests/: test.c
